finished first version of index.html>

--- a/index.html
+++ b/index.html
@@ -24,7 +24,57 @@
         world of quantum computing!
       </p>
       <img src="./img/quantum-cmp.jpg" alt="Quantum computer" />
-      <section class="info"></section>
     </header>
+    <section class="info">
+      <h2>You'll Learn About:</h2>
+      <div class="imgs">
+        <figure>
+          <img src="./img/clock.jpg" />
+          <figcaption>
+            The greatest scientists who contributed to the idea, and its
+            evolution.
+          </figcaption>
+        </figure>
+        <figure>
+          <img src="./img/binary.jpg" alt="sphere with zeros and ones" />
+          <figcaption>
+            The qubit, which is the basic unit of quantum information—the
+            quantum version of the classic binary bit.
+          </figcaption>
+        </figure>
+        <figure>
+          <img src="./img/algorithm.jpg" alt="green code" />
+          <figcaption>
+            Quantum algorithms that offer more than a polynomial speedup over
+            the best known classical algorithm
+          </figcaption>
+        </figure>
+        <figure>
+          <img src="./img/potential.jpg" alt="person staring at stars" />
+          <figcaption>
+            Its great potential, from cryptography, to searching problems, to
+            simulation of quantum systems, and many more!
+          </figcaption>
+        </figure>
+      </div>
+    </section>
+    <section class="quote">
+      <p>
+        “Simulating the behavior of 100 billion neurons of human brain is not
+        feasible by classical computer but quantum machine learning promises to
+        fulfill that requirement.”
+      </p>
+      <p>-Amit Ray</p>
+    </section>
+    <section class="sign-up">
+      <div class="text">
+        <h2>Learn about the future of computers! It's time!</h2>
+        <p>Sign up for our course by clicking the button right over there!</p>
+        <button>Sign up</button>
+      </div>
+    </section>
+    <footer>
+      <p>Copyright © The Odin Project 2021</p>
+    </footer>
   </body>
 </html>
